--- a/server/app/views/colorForm.scala.html
+++ b/server/app/views/colorForm.scala.html
@@ -2,11 +2,12 @@
 
 <!DOCTYPE html>
 
-@main("form1") {
-    <h2>Form 2</h2>
+@main("nameForm") {
+    <h2>Color and Name Form</h2>
 
-    <form method="get" action="nameColorGet">  
+    <form method="get" action="showNameColor">  
         Name: <input type="text" name="name"> </input>
+        <br>
         Color: <input type="text" name="color"> </input>
         <input type="submit"> </input>
     </form>
