--- a/server/app/views/usernameForm.scala.html
+++ b/server/app/views/usernameForm.scala.html
@@ -2,12 +2,12 @@
 
 <!DOCTYPE html>
 
-@main("nameForm") {
+@main("usernameForm") {
     <h2>Color and Name Form</h2>
 
     <form method="post" action="showUsername">  
         Username: <input type="text" name="username"> </input>
         <input type="submit"> </input>
-    </form>
+    </form>>
 
 }
