--- a/server/app/views/counter.scala.html
+++ b/server/app/views/counter.scala.html
@@ -4,7 +4,8 @@
 
   <h2>Counter: @count</h2>
   <br>
-  <button type="button" href="@routes.NumCount.increase">Click Me!</button>
+  <button type="button" onclick="">Click Me!</button>
   <div id="root"></div>
 
+  
 }
